feat(content): update text casing, integrate assets and align with website

--- a/index.html
+++ b/index.html
@@ -419,15 +419,13 @@
     <!-- SLIDE 1: TITLE -->
     <div class="slide-container layout-hero" id="slide1">
         <div class="logo-area">
-            <!-- REMPLACEZ CETTE IMAGE PAR VOTRE LOGO -->
-            <div class="logo-placeholder">LOGO FOKKUS ICI</div>
-            <!-- Exemple si vous aviez l'image : <img src="logo.png" class="logo-img"> -->
+            <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
         </div>
         <div class="hero-content">
-            <span class="sub-title">PROJET D'ASSOCIATION</span>
-            <h1 style="margin-bottom: 20px;">FOKKUS</h1>
-            <p style="font-size: 24px; color: #555; font-weight: 300;">Devenez la référence scientifique<br>et
-                pédagogique de Fokkus.</p>
+            <span class="sub-title">Projet d'association</span>
+            <h1 style="margin-bottom: 20px;">Fokkus</h1>
+            <p style="font-size: 24px; color: #555; font-weight: 300;">La préparation mentale de haut
+                niveau,<br>accessible à tous les sportifs.</p>
         </div>
         <div class="hero-image">
             <img src="http://googleusercontent.com/image_collection/image_retrieval/10766205936653227473"
@@ -439,27 +437,26 @@
     <div class="slide-container layout-content" id="slide2"
         style="background: var(--bg-light); justify-content: center;">
         <div class="logo-area">
-            <!-- LOGO -->
-            <div class="logo-placeholder">LOGO FOKKUS</div>
+            <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
         </div>
 
         <!-- ESPACEMENT AUGMENTÉ -->
         <div style="margin-top: 100px;">
-            <span class="sub-title">POURQUOI MAINTENANT ?</span>
-            <h2>LE PHYSIQUE EST OPTIMISÉ.<br>LE MENTAL EST OUBLIÉ.</h2>
+            <span class="sub-title">Pourquoi maintenant ?</span>
+            <h2>Le physique est optimisé.<br>Le mental est oublié.</h2>
         </div>
 
         <div class="grid-2">
             <div style="background: white; padding: 40px; border-radius: 20px;">
                 <div class="icon-box"><i class="fa-solid fa-triangle-exclamation"></i></div>
-                <h3>Le Constat</h3>
+                <h3>Le constat</h3>
                 <p>Aujourd'hui, la préparation physique est optimisée à 99%. La prochaine frontière de la performance,
                     c'est le mental.</p>
                 <p>Pourtant, elle reste <strong>chère, élitiste ou mal digitalisée</strong>.</p>
             </div>
             <div style="background: var(--primary); color: white; padding: 40px; border-radius: 20px;">
                 <div class="icon-box" style="color: var(--primary);"><i class="fa-solid fa-eye"></i></div>
-                <h3 style="color: white;">Notre Vision</h3>
+                <h3 style="color: white;">Notre vision</h3>
                 <p style="color: rgba(255,255,255,0.9);">Démocratiser l'accès à l'excellence mentale.</p>
                 <p style="color: rgba(255,255,255,0.9);">Faire de Fokkus l'outil de référence, capable de déclencher
                     l'état de <strong>flow</strong> à la demande.</p>
@@ -471,54 +468,48 @@
     <div class="slide-container layout-split" id="slide3">
         <div class="split-left">
             <div class="logo-area">
-                <!-- LOGO -->
-                <div class="logo-placeholder">LOGO FOKKUS</div>
+                <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
             </div>
             <div style="margin-top: 60px;">
-                <span class="sub-title">CE QUE NOUS CONSTRUISONS</span>
-                <h2>L'EXPÉRIENCE FOKKUS.</h2>
+                <span class="sub-title">Ce que nous construisons</span>
+                <h2>L'expérience Fokkus.</h2>
             </div>
 
             <div style="margin-top: 20px;">
                 <div style="margin-bottom: 25px;">
                     <h3 style="display: flex; align-items: center; gap: 10px;"><i class="fa-solid fa-route"
-                            style="color: var(--secondary);"></i> Parcours Personnalisés</h3>
-                    <p>Programmes audio guidés (ex: "Gestion du stress").</p>
+                            style="color: var(--secondary);"></i> Parcours personnalisés</h3>
+                    <p>Diagnostic et profil mental personnalisé (stress, confiance, motivation).</p>
                 </div>
                 <div style="margin-bottom: 25px;">
                     <h3 style="display: flex; align-items: center; gap: 10px;"><i class="fa-solid fa-kit-medical"
-                            style="color: var(--secondary);"></i> Emergency Kit</h3>
-                    <p>Exercices courts (2-3 min) pour un effet immédiat.</p>
+                            style="color: var(--secondary);"></i> Routine quotidienne</h3>
+                    <p>Programmes audio guidés adaptés à vos objectifs et votre rythme.</p>
                 </div>
                 <div>
-                    <h3 style="display: flex; align-items: center; gap: 10px;"><i class="fa-solid fa-trophy"
-                            style="color: var(--secondary);"></i> Gamification</h3>
-                    <p>Suivi de progression ludique (XP, Niveaux).</p>
+                    <h3 style="display: flex; align-items: center; gap: 10px;"><i class="fa-solid fa-robot"
+                            style="color: var(--secondary);"></i> Coach IA 24/7</h3>
+                    <p>Un accompagnement constant pour maintenir l'engagement.</p>
                 </div>
             </div>
         </div>
         <div class="split-right">
-            <!-- PLACEHOLDER POUR MAQUETTES -->
-            <div class="img-placeholder phone-mockup">
-                MAQUETTE<br>ACCUEIL
-            </div>
-            <div class="img-placeholder phone-mockup" style="height: 500px; width: 250px; opacity: 0.7;">
-                MAQUETTE<br>PROFIL
-            </div>
+            <!-- MAQUETTE -->
+            <img src="assets/app_mockup.png" class="phone-mockup" style="object-fit: cover; border: 8px solid #1A3050;"
+                alt="Maquette App Fokkus">
         </div>
     </div>
 
     <!-- SLIDE 4: ROLE (AÉRÉ) -->
     <div class="slide-container layout-content" id="slide4" style="background: var(--bg-white);">
         <div class="logo-area">
-            <!-- LOGO -->
-            <div class="logo-placeholder">LOGO FOKKUS</div>
+            <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
         </div>
 
         <!-- ESPACEMENT DU HAUT CORRIGÉ -->
         <div style="margin-top: 100px; margin-bottom: 20px;">
-            <span class="sub-title">VOTRE IMPACT</span>
-            <h2>HEAD OF MENTAL PERFORMANCE.</h2>
+            <span class="sub-title">Votre impact</span>
+            <h2>Head of mental performance.</h2>
         </div>
 
         <div class="card-flex">
@@ -529,7 +520,7 @@
             </div>
             <div class="card">
                 <div class="icon-box"><i class="fa-solid fa-microphone-lines"></i></div>
-                <h3>Contenu & Parcours</h3>
+                <h3>Contenu & parcours</h3>
                 <p>Création des scripts audio et structuration des cycles de progression.</p>
             </div>
             <div class="card">
@@ -544,8 +535,8 @@
             <div class="icon-box" style="margin-bottom: 0; background: var(--secondary); color: white;"><i
                     class="fa-solid fa-clock"></i></div>
             <div style="flex: 1;">
-                <h3 style="margin: 0; font-size: 24px;">Investissement Temps</h3>
-                <p style="margin: 0; font-size: 18px; color: #555;">Flexible, Asynchrone & Compatible avec votre
+                <h3 style="margin: 0; font-size: 24px;">Investissement temps</h3>
+                <p style="margin: 0; font-size: 18px; color: #555;">Flexible, asynchrone & compatible avec votre
                     activité.</p>
             </div>
             <div style="text-align: right;">
@@ -558,22 +549,23 @@
     <!-- SLIDE 5: OFFRE -->
     <div class="slide-container layout-dark" id="slide5">
         <div class="logo-area">
-            <!-- LOGO BLANC -->
-            <div class="logo-placeholder" style="color: white; border-color: white;">LOGO FOKKUS</div>
+            <!-- LOGO BLANC (Filtre CSS pour le rendre blanc si c'est un PNG noir, sinon utiliser une version blanche) -->
+            <img src="assets/fokkus_logo.png" class="logo-img" style="filter: brightness(0) invert(1);"
+                alt="Logo Fokkus">
         </div>
         <div style="text-align: center; margin-bottom: 60px;">
-            <span class="sub-title" style="color: var(--secondary);">LA PROPOSITION DE VALEUR</span>
-            <h2>REJOIGNEZ L'ÉQUIPE FONDATRICE</h2>
+            <span class="sub-title" style="color: var(--secondary);">La proposition de valeur</span>
+            <h2>Rejoignez l'équipe fondatrice</h2>
         </div>
 
         <div style="display: flex; align-items: center; justify-content: center; gap: 80px;">
             <div class="stat-box">
                 <div class="stat-number">10%</div>
-                <div class="stat-label">EQUITY (CAPITAL)</div>
+                <div class="stat-label">Equity (Capital)</div>
             </div>
             <div style="height: 150px; width: 2px; background: rgba(255,255,255,0.2);"></div>
             <div style="max-width: 500px;">
-                <h3 style="color: white; margin-bottom: 20px;">Statut d'Associé</h3>
+                <h3 style="color: white; margin-bottom: 20px;">Statut d'associé</h3>
                 <p style="color: rgba(255,255,255,0.8); font-size: 20px;">
                     Vous ne travaillez pas "pour" Fokkus, vous possédez Fokkus.
                 </p>
@@ -589,34 +581,33 @@
     <!-- SLIDE 6: ROADMAP (CHIFFRES À JOUR) -->
     <div class="slide-container layout-content" id="slide6" style="background: var(--bg-light);">
         <div class="logo-area">
-            <!-- LOGO -->
-            <div class="logo-placeholder">LOGO FOKKUS</div>
+            <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
         </div>
         <div style="margin-top: 40px;">
-            <span class="sub-title">L'ÉVOLUTION</span>
-            <h2>LA TRAJECTOIRE.</h2>
+            <span class="sub-title">L'évolution</span>
+            <h2>La trajectoire.</h2>
         </div>
 
         <div class="timeline">
             <div class="timeline-item">
                 <div class="dot">1</div>
                 <h3>Année 1</h3>
-                <p><strong>Lancement App.</strong><br>Sortie iOS/Android.</p>
+                <p><strong>Lancement app.</strong><br>Sortie iOS/Android.</p>
             </div>
             <div class="timeline-item">
                 <div class="dot">2</div>
                 <h3>Année 2</h3>
                 <p><strong>Traction & B2B.</strong><br>Intégration clubs pros.<br><br>
                     <span style="color: var(--primary); font-weight: 700; font-size: 24px;">4 500</span><br>
-                    <span style="font-size: 14px;">Utilisateurs Premium</span>
+                    <span style="font-size: 14px;">Utilisateurs premium</span>
                 </p>
             </div>
             <div class="timeline-item">
                 <div class="dot">3</div>
                 <h3>Année 3</h3>
-                <p><strong>Leader Européen.</strong><br>IA Prédictive.<br><br>
+                <p><strong>Leader européen.</strong><br>IA prédictive.<br><br>
                     <span style="color: var(--primary); font-weight: 700; font-size: 24px;">90 000</span><br>
-                    <span style="font-size: 14px;">Utilisateurs Actifs</span>
+                    <span style="font-size: 14px;">Utilisateurs actifs</span>
                 </p>
             </div>
         </div>
@@ -625,21 +616,18 @@
     <!-- SLIDE 7: CONCLUSION (TITRE CHANGÉ + PHOTO) -->
     <div class="slide-container layout-hero" id="slide7">
         <div class="logo-area">
-            <!-- LOGO -->
-            <div class="logo-placeholder">LOGO FOKKUS</div>
+            <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
         </div>
         <div class="hero-content" style="text-align: center; align-items: center;">
-            <h1 style="font-size: 72px; margin-bottom: 30px;">REJOIGNEZ<br>L'AVENTURE</h1>
+            <h1 style="font-size: 72px; margin-bottom: 30px;">Rejoignez<br>l'aventure</h1>
             <p style="font-size: 24px; max-width: 700px; margin-bottom: 50px;">
                 Construisons ensemble la référence de la préparation mentale.
             </p>
 
             <div
                 style="background: var(--bg-light); padding: 20px 40px; border-radius: 60px; display: inline-flex; align-items: center; border: 1px solid #ddd;">
-                <!-- PLACEHOLDER PHOTO -->
-                <div class="img-placeholder profile-photo">
-                    VOTRE<br>PHOTO
-                </div>
+                <!-- PHOTO OSCAR -->
+                <img src="assets/oscar_photo.jpg" class="profile-photo" alt="Oscar Boittiaux">
                 <div style="text-align: left;">
                     <div style="font-weight: 700; font-size: 22px; color: var(--primary);">Oscar Boittiaux</div>
                     <div style="color: #666; font-size: 16px;">CEO & Fondateur</div>
