feat: enhance hero slides with decorative elements
- Fix text cutoff: reduce hero title to 90px, adjust max-width to 950px
- Enhance badge: larger size (15px), stronger background, pulse animation
- Improve subtitle: gradient background, white text, better visibility
- Add decorative floating circles to slides 1, 5, 7
- Add mesh gradient backgrounds for depth
- Add dot pattern overlays for texture
- Fill empty spaces with premium visual elements
- Better visual balance and hierarchy

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
     <!-- SLIDE 1: HERO BOLD (LIGHT + ANIMATIONS) -->
     <div class="slide-container layout-hero-light active" id="slide1">
+        <!-- Decorative Elements -->
+        <div class="mesh-gradient"></div>
+        <div class="decorative-circle decorative-circle-1"></div>
+        <div class="decorative-circle decorative-circle-2"></div>
+        <div class="decorative-circle decorative-circle-3"></div>
+        <div class="decorative-circle decorative-circle-4"></div>
+        <div class="dot-pattern"></div>
+
         <div class="logo-area">
             <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
             <span class="logo-text">Fokkus</span>
@@ -155,6 +163,13 @@
 
     <!-- SLIDE 5: OFFRE (LIGHT + ANIMATIONS) -->
     <div class="slide-container layout-offer-light" id="slide5">
+        <!-- Decorative Elements -->
+        <div class="mesh-gradient"></div>
+        <div class="decorative-circle decorative-circle-1"></div>
+        <div class="decorative-circle decorative-circle-2"></div>
+        <div class="decorative-circle decorative-circle-4"></div>
+        <div class="dot-pattern"></div>
+
         <div class="offer-left animate-zoom delay-1">
             <div
                 style="font-family: 'Inter', sans-serif; font-size: 100px; font-weight: 800; color: var(--secondary); line-height: 1; letter-spacing: -0.05em;">
@@ -165,7 +180,7 @@
         </div>
 
         <div class="offer-right animate-fade-up delay-2">
-            <span class="sub-title" style="color: var(--secondary);">La proposition de valeur</span>
+            <span class="sub-title" style="color: white;">La proposition de valeur</span>
             <h2 style="font-size: 48px; margin-bottom: 20px; color: var(--primary);">Rejoignez l'équipe<br>fondatrice
             </h2>
             <p style="font-size: 20px; opacity: 0.8; margin-bottom: 30px; color: var(--text-grey);">
@@ -260,12 +275,19 @@
 
     <!-- SLIDE 7: CONCLUSION (LIGHT + ANIMATIONS) -->
     <div class="slide-container layout-hero-light" id="slide7">
+        <!-- Decorative Elements -->
+        <div class="mesh-gradient"></div>
+        <div class="decorative-circle decorative-circle-1"></div>
+        <div class="decorative-circle decorative-circle-2"></div>
+        <div class="decorative-circle decorative-circle-3"></div>
+        <div class="dot-pattern"></div>
+
         <div class="logo-area">
             <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
             <span class="logo-text">Fokkus</span>
         </div>
         <div class="hero-content-bold">
-            <h1 class="hero-title animate-zoom delay-1" style="font-size: 100px;">Rejoignez<br>l'aventure</h1>
+            <h1 class="hero-title animate-zoom delay-1" style="font-size: 90px;">Rejoignez<br>l'aventure</h1>
             <div class="hero-separator animate-zoom delay-2" style="width: 100px; height: 8px;"></div>
             <p class="hero-subtitle animate-fade-up delay-3" style="margin-bottom: 50px;">
                 Construisons ensemble la référence<br>de la préparation mentale.
