fix: polish visual details
- Enlarge logo: 32px → 40px, text 20px → 26px
- Fix text cutoff: reduce hero title 90px → 85px
- Remove floating animation from profile cards (static now)
- Adjust letter-spacing for better fit

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <span class="logo-text">Fokkus</span>
         </div>
         <div class="hero-content-bold">
-            <h1 class="hero-title animate-zoom delay-1" style="font-size: 90px;">Rejoignez<br>l'aventure</h1>
+            <h1 class="hero-title animate-zoom delay-1" style="font-size: 85px;">Rejoignez<br>l'aventure</h1>
             <div class="hero-separator animate-zoom delay-2" style="width: 100px; height: 8px;"></div>
             <p class="hero-subtitle animate-fade-up delay-3" style="margin-bottom: 50px;">
                 Construisons ensemble la référence<br>de la préparation mentale.
@@ -295,7 +295,7 @@
 
             <div class="profile-container animate-fade-up delay-4">
                 <!-- OSCAR -->
-                <div class="profile-card animate-float"
+                <div class="profile-card"
                     style="background: white; border: 1px solid #eee; color: var(--primary); box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
                     <img src="assets/oscar_photo.jpg" class="profile-photo" alt="Oscar Boittiaux">
                     <div style="text-align: left;">
@@ -306,7 +306,7 @@
                 </div>
 
                 <!-- PAUL -->
-                <div class="profile-card animate-float delay-2"
+                <div class="profile-card"
                     style="background: white; border: 1px solid #eee; color: var(--primary); box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
                     <img src="assets/paul_photo.jpg" class="profile-photo" alt="Paul Idoux">
                     <div style="text-align: left;">
