--- a/index.html
+++ b/index.html
@@ -161,41 +161,86 @@
         </div>
     </div>
 
-    <!-- SLIDE 5: OFFRE (LIGHT + ANIMATIONS) -->
-    <div class="slide-container layout-offer-light" id="slide5">
+    <!-- SLIDE 5: OFFRE (PREMIUM CENTERED DESIGN) -->
+    <div class="slide-container layout-hero-light" id="slide5">
         <!-- Decorative Elements -->
         <div class="mesh-gradient"></div>
         <div class="decorative-circle decorative-circle-1"></div>
         <div class="decorative-circle decorative-circle-2"></div>
+        <div class="decorative-circle decorative-circle-3"></div>
         <div class="decorative-circle decorative-circle-4"></div>
         <div class="dot-pattern"></div>
 
-        <div class="offer-left animate-zoom delay-1">
-            <div
-                style="font-family: 'Inter', sans-serif; font-size: 100px; font-weight: 800; color: var(--secondary); line-height: 1; letter-spacing: -0.05em;">
-                10%</div>
-            <div
-                style="font-family: 'Inter', sans-serif; font-size: 24px; font-weight: 600; opacity: 0.9; color: var(--primary);">
-                Equity (Capital)</div>
+        <div class="logo-area">
+            <img src="assets/fokkus_logo.png" class="logo-img" alt="Logo Fokkus">
+            <span class="logo-text">Fokkus</span>
         </div>
 
-        <div class="offer-right animate-fade-up delay-2">
-            <span class="sub-title" style="color: white;">La proposition de valeur</span>
-            <h2 style="font-size: 48px; margin-bottom: 20px; color: var(--primary);">Rejoignez l'équipe<br>fondatrice
-            </h2>
-            <p style="font-size: 20px; opacity: 0.8; margin-bottom: 30px; color: var(--text-grey);">
-                Vous ne travaillez pas "pour" Fokkus,<br>vous possédez Fokkus.
-            </p>
-            <ul style="list-style: none; padding: 0; font-size: 18px; opacity: 0.9; color: var(--primary);">
-                <li style="margin-bottom: 10px; display: flex; align-items: center;"><i class="fa-solid fa-check"
-                        style="color: var(--secondary); margin-right: 12px;"></i> Vesting 4 ans (Standard marché).</li>
-                <li style="margin-bottom: 10px; display: flex; align-items: center;"><i class="fa-solid fa-check"
-                        style="color: var(--secondary); margin-right: 12px;"></i> Valorisation de vos parts à la sortie
-                    (Exit).</li>
-                <li style="display: flex; align-items: center;"><i class="fa-solid fa-check"
-                        style="color: var(--secondary); margin-right: 12px;"></i> Rémunération future déclenchée à la
-                    rentabilité.</li>
-            </ul>
+        <div class="hero-content-bold" style="max-width: 1100px;">
+            <span class="sub-title animate-fade-up delay-1">La proposition de valeur</span>
+            <h1 class="hero-title animate-zoom delay-2" style="font-size: 62px; margin-bottom: 25px;">Rejoignez
+                l'équipe<br>fondatrice</h1>
+
+            <!-- Equity Highlight Card -->
+            <div class="animate-zoom delay-3"
+                style="background: white; border-radius: 28px; padding: 40px 60px; box-shadow: 0 20px 60px rgba(26, 48, 80, 0.15); margin-bottom: 35px; border: 1px solid rgba(26, 48, 80, 0.08); position: relative; overflow: hidden;">
+                <div
+                    style="position: absolute; top: 0; left: 0; right: 0; height: 5px; background: var(--gradient-accent);">
+                </div>
+                <div style="text-align: center;">
+                    <div
+                        style="font-size: 100px; font-weight: 900; background: var(--gradient-secondary); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; line-height: 1; margin-bottom: 8px;">
+                        10%</div>
+                    <div
+                        style="font-size: 24px; font-weight: 700; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em;">
+                        Equity (Capital)</div>
+                    <p
+                        style="font-size: 19px; color: var(--text-grey); margin-top: 20px; margin-bottom: 0; font-weight: 50;">
+                        Vous ne
+                        travaillez pas "pour" Fokkus,<br><strong style="color: var(--primary);">vous possédez
+                            Fokkus.</strong></p>
+                </div>
+            </div>
+
+            <!-- Benefits Grid -->
+            <div class="animate-fade-up delay-4"
+                style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; max-width: 950px; margin: 0 auto;">
+                <!-- Benefit 1 -->
+                <div
+                    style="background: white; border-radius: 18px; padding: 25px 20px; text-align: center; box-shadow: 0 10px 30px rgba(26, 48, 80, 0.08); border: 1px solid rgba(26, 48, 80, 0.06); transition: all 0.3s;">
+                    <div
+                        style="width: 52px; height: 52px; background: var(--gradient-secondary); border-radius: 14px; display: flex; align-items: center; justify-content: center; margin: 0 auto 16px; box-shadow: 0 8px 20px rgba(128, 163, 186, 0.3);">
+                        <i class="fa-solid fa-calendar-days" style="font-size: 24px; color: white;"></i>
+                    </div>
+                    <h3 style="font-size: 17px; font-weight: 700; color: var(--primary); margin-bottom: 8px;">Vesting 4
+                        ans</h3>
+                    <p style="font-size: 14px; color: var(--text-grey); margin: 0;">Standard marché</p>
+                </div>
+
+                <!-- Benefit 2 -->
+                <div
+                    style="background: white; border-radius: 18px; padding: 25px 20px; text-align: center; box-shadow: 0 10px 30px rgba(26, 48, 80, 0.08); border: 1px solid rgba(26, 48, 80, 0.06); transition: all 0.3s;">
+                    <div
+                        style="width: 52px; height: 52px; background: var(--gradient-accent); border-radius: 14px; display: flex; align-items: center; justify-content: center; margin: 0 auto 16px; box-shadow: 0 8px 20px rgba(16, 185, 129, 0.3);">
+                        <i class="fa-solid fa-rocket" style="font-size: 24px; color: white;"></i>
+                    </div>
+                    <h3 style="font-size: 17px; font-weight: 700; color: var(--primary); margin-bottom: 8px;">
+                        Valorisation Exit</h3>
+                    <p style="font-size: 14px; color: var(--text-grey); margin: 0;">Parts à la sortie</p>
+                </div>
+
+                <!-- Benefit 3 -->
+                <div
+                    style="background: white; border-radius: 18px; padding: 25px 20px; text-align: center; box-shadow: 0 10px 30px rgba(26, 48, 80, 0.08); border: 1px solid rgba(26, 48, 80, 0.06); transition: all 0.3s;">
+                    <div
+                        style="width: 52px; height: 52px; background: var(--gradient-primary); border-radius: 14px; display: flex; align-items: center; justify-content: center; margin: 0 auto 16px; box-shadow: 0 8px 20px rgba(26, 48, 80, 0.3);">
+                        <i class="fa-solid fa-chart-line" style="font-size: 24px; color: white;"></i>
+                    </div>
+                    <h3 style="font-size: 17px; font-weight: 700; color: var(--primary); margin-bottom: 8px;">
+                        Rémunération</h3>
+                    <p style="font-size: 14px; color: var(--text-grey); margin: 0;">Dès rentabilité</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -300,7 +345,7 @@
                     <img src="assets/oscar_photo.jpg" class="profile-photo" alt="Oscar Boittiaux">
                     <div style="text-align: left;">
                         <div style="font-weight: 700; font-size: 22px; color: var(--primary);">Oscar Boittiaux</div>
-                        <div style="color: var(--text-grey); font-size: 16px;">CEO & Fondateur</div>
+                        <div style="color: var(--text-grey); font-size: 16px;">CEO & Co-fondateur</div>
                         <div style="color: var(--secondary); font-weight: 600; font-size: 16px;">oscar@fokkus.fr</div>
                     </div>
                 </div>
