--- a/index.html
+++ b/index.html
@@ -161,14 +161,12 @@
         </div>
     </div>
 
-    <!-- SLIDE 5: OFFRE (PREMIUM CENTERED DESIGN) -->
+    <!-- SLIDE 5: OFFRE (CLEAN SPLIT DESIGN) -->
     <div class="slide-container layout-hero-light" id="slide5">
         <!-- Decorative Elements -->
         <div class="mesh-gradient"></div>
         <div class="decorative-circle decorative-circle-1"></div>
         <div class="decorative-circle decorative-circle-2"></div>
-        <div class="decorative-circle decorative-circle-3"></div>
-        <div class="decorative-circle decorative-circle-4"></div>
         <div class="dot-pattern"></div>
 
         <div class="logo-area">
@@ -176,69 +174,73 @@
             <span class="logo-text">Fokkus</span>
         </div>
 
-        <div class="hero-content-bold" style="max-width: 1100px;">
-            <span class="sub-title animate-fade-up delay-1">La proposition de valeur</span>
-            <h1 class="hero-title animate-zoom delay-2" style="font-size: 62px; margin-bottom: 25px;">Rejoignez
-                l'équipe<br>fondatrice</h1>
-
-            <!-- Equity Highlight Card -->
-            <div class="animate-zoom delay-3"
-                style="background: white; border-radius: 28px; padding: 40px 60px; box-shadow: 0 20px 60px rgba(26, 48, 80, 0.15); margin-bottom: 35px; border: 1px solid rgba(26, 48, 80, 0.08); position: relative; overflow: hidden;">
+        <div
+            style="display: flex; align-items: center; justify-content: center; height: 100%; padding: 0 100px; gap: 100px; position: relative; z-index: 10;">
+            <!-- Left: Equity -->
+            <div class="animate-zoom delay-1" style="flex: 1; text-align: center;">
                 <div
-                    style="position: absolute; top: 0; left: 0; right: 0; height: 5px; background: var(--gradient-accent);">
-                </div>
-                <div style="text-align: center;">
-                    <div
-                        style="font-size: 100px; font-weight: 900; background: var(--gradient-secondary); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; line-height: 1; margin-bottom: 8px;">
-                        10%</div>
-                    <div
-                        style="font-size: 24px; font-weight: 700; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em;">
-                        Equity (Capital)</div>
-                    <p
-                        style="font-size: 19px; color: var(--text-grey); margin-top: 20px; margin-bottom: 0; font-weight: 50;">
-                        Vous ne
-                        travaillez pas "pour" Fokkus,<br><strong style="color: var(--primary);">vous possédez
-                            Fokkus.</strong></p>
-                </div>
+                    style="font-size: 140px; font-weight: 900; background: var(--gradient-secondary); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; line-height: 1; margin-bottom: 15px;">
+                    10%</div>
+                <div
+                    style="font-size: 32px; font-weight: 700; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 20px;">
+                    Equity</div>
+                <p
+                    style="font-size: 20px; color: var(--text-grey); font-weight: 500; max-width: 400px; margin: 0 auto;">
+                    Vous ne travaillez pas <strong style="color: var(--primary);">"pour"</strong> Fokkus,<br>vous
+                    <strong style="color: var(--primary);">possédez</strong> Fokkus.</p>
             </div>
 
-            <!-- Benefits Grid -->
-            <div class="animate-fade-up delay-4"
-                style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; max-width: 950px; margin: 0 auto;">
-                <!-- Benefit 1 -->
-                <div
-                    style="background: white; border-radius: 18px; padding: 25px 20px; text-align: center; box-shadow: 0 10px 30px rgba(26, 48, 80, 0.08); border: 1px solid rgba(26, 48, 80, 0.06); transition: all 0.3s;">
-                    <div
-                        style="width: 52px; height: 52px; background: var(--gradient-secondary); border-radius: 14px; display: flex; align-items: center; justify-content: center; margin: 0 auto 16px; box-shadow: 0 8px 20px rgba(128, 163, 186, 0.3);">
-                        <i class="fa-solid fa-calendar-days" style="font-size: 24px; color: white;"></i>
-                    </div>
-                    <h3 style="font-size: 17px; font-weight: 700; color: var(--primary); margin-bottom: 8px;">Vesting 4
-                        ans</h3>
-                    <p style="font-size: 14px; color: var(--text-grey); margin: 0;">Standard marché</p>
-                </div>
+            <!-- Divider -->
+            <div
+                style="width: 3px; height: 400px; background: var(--gradient-secondary); border-radius: 2px; box-shadow: 0 0 20px rgba(128, 163, 186, 0.3);">
+            </div>
 
-                <!-- Benefit 2 -->
-                <div
-                    style="background: white; border-radius: 18px; padding: 25px 20px; text-align: center; box-shadow: 0 10px 30px rgba(26, 48, 80, 0.08); border: 1px solid rgba(26, 48, 80, 0.06); transition: all 0.3s;">
-                    <div
-                        style="width: 52px; height: 52px; background: var(--gradient-accent); border-radius: 14px; display: flex; align-items: center; justify-content: center; margin: 0 auto 16px; box-shadow: 0 8px 20px rgba(16, 185, 129, 0.3);">
-                        <i class="fa-solid fa-rocket" style="font-size: 24px; color: white;"></i>
-                    </div>
-                    <h3 style="font-size: 17px; font-weight: 700; color: var(--primary); margin-bottom: 8px;">
-                        Valorisation Exit</h3>
-                    <p style="font-size: 14px; color: var(--text-grey); margin: 0;">Parts à la sortie</p>
-                </div>
+            <!-- Right: Benefits -->
+            <div class="animate-fade-up delay-2" style="flex: 1;">
+                <span class="sub-title" style="margin-bottom: 25px;">La proposition de valeur</span>
+                <h2
+                    style="font-size: 52px; font-weight: 800; color: var(--primary); margin-bottom: 40px; line-height: 1.1;">
+                    Rejoignez<br>l'équipe fondatrice</h2>
 
-                <!-- Benefit 3 -->
-                <div
-                    style="background: white; border-radius: 18px; padding: 25px 20px; text-align: center; box-shadow: 0 10px 30px rgba(26, 48, 80, 0.08); border: 1px solid rgba(26, 48, 80, 0.06); transition: all 0.3s;">
-                    <div
-                        style="width: 52px; height: 52px; background: var(--gradient-primary); border-radius: 14px; display: flex; align-items: center; justify-content: center; margin: 0 auto 16px; box-shadow: 0 8px 20px rgba(26, 48, 80, 0.3);">
-                        <i class="fa-solid fa-chart-line" style="font-size: 24px; color: white;"></i>
+                <div style="display: flex; flex-direction: column; gap: 25px;">
+                    <!-- Benefit 1 -->
+                    <div style="display: flex; align-items: flex-start; gap: 20px;">
+                        <div
+                            style="width: 48px; height: 48px; background: var(--gradient-secondary); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(128, 163, 186, 0.3);">
+                            <i class="fa-solid fa-calendar-days" style="font-size: 22px; color: white;"></i>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 5px 0;">
+                                Vesting 4 ans</h3>
+                            <p style="font-size: 16px; color: var(--text-grey); margin: 0;">Standard marché</p>
+                        </div>
                     </div>
-                    <h3 style="font-size: 17px; font-weight: 700; color: var(--primary); margin-bottom: 8px;">
-                        Rémunération</h3>
-                    <p style="font-size: 14px; color: var(--text-grey); margin: 0;">Dès rentabilité</p>
+
+                    <!-- Benefit 2 -->
+                    <div style="display: flex; align-items: flex-start; gap: 20px;">
+                        <div
+                            style="width: 48px; height: 48px; background: var(--gradient-accent); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3);">
+                            <i class="fa-solid fa-rocket" style="font-size: 22px; color: white;"></i>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 5px 0;">
+                                Valorisation Exit</h3>
+                            <p style="font-size: 16px; color: var(--text-grey); margin: 0;">Parts à la sortie</p>
+                        </div>
+                    </div>
+
+                    <!-- Benefit 3 -->
+                    <div style="display: flex; align-items: flex-start; gap: 20px;">
+                        <div
+                            style="width: 48px; height: 48px; background: var(--gradient-primary); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(26, 48, 80, 0.3);">
+                            <i class="fa-solid fa-chart-line" style="font-size: 22px; color: white;"></i>
+                        </div>
+                        <div>
+                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 5px 0;">
+                                Rémunération</h3>
+                            <p style="font-size: 16px; color: var(--text-grey); margin: 0;">Dès rentabilité</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
