fix: improve slide 5 alignment and spacing
- Title on one line: 'Rejoignez l'équipe fondatrice'
- Reduce title size: 52px → 48px for better fit
- Align benefits items to center instead of flex-start
- Reduce gap between sections: 100px → 80px
- Reduce divider height: 400px → 350px
- Better vertical centering and spacing
- Icons 48px → 50px for better alignment

--- a/index.html
+++ b/index.html
@@ -175,68 +175,68 @@
         </div>
 
         <div
-            style="display: flex; align-items: center; justify-content: center; height: 100%; padding: 0 100px; gap: 100px; position: relative; z-index: 10;">
+            style="display: flex; align-items: center; justify-content: center; height: 100%; padding: 0 100px; gap: 80px; position: relative; z-index: 10;">
             <!-- Left: Equity -->
             <div class="animate-zoom delay-1" style="flex: 1; text-align: center;">
                 <div
                     style="font-size: 140px; font-weight: 900; background: var(--gradient-secondary); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; line-height: 1; margin-bottom: 15px;">
                     10%</div>
                 <div
-                    style="font-size: 32px; font-weight: 700; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 20px;">
+                    style="font-size: 32px; font-weight: 700; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 25px;">
                     Equity</div>
                 <p
-                    style="font-size: 20px; color: var(--text-grey); font-weight: 500; max-width: 400px; margin: 0 auto;">
+                    style="font-size: 19px; color: var(--text-grey); font-weight: 500; max-width: 380px; margin: 0 auto; line-height: 1.5;">
                     Vous ne travaillez pas <strong style="color: var(--primary);">"pour"</strong> Fokkus,<br>vous
                     <strong style="color: var(--primary);">possédez</strong> Fokkus.</p>
             </div>
 
             <!-- Divider -->
             <div
-                style="width: 3px; height: 400px; background: var(--gradient-secondary); border-radius: 2px; box-shadow: 0 0 20px rgba(128, 163, 186, 0.3);">
+                style="width: 3px; height: 350px; background: var(--gradient-secondary); border-radius: 2px; box-shadow: 0 0 20px rgba(128, 163, 186, 0.3);">
             </div>
 
             <!-- Right: Benefits -->
             <div class="animate-fade-up delay-2" style="flex: 1;">
-                <span class="sub-title" style="margin-bottom: 25px;">La proposition de valeur</span>
+                <span class="sub-title" style="display: block; margin-bottom: 20px;">La proposition de valeur</span>
                 <h2
-                    style="font-size: 52px; font-weight: 800; color: var(--primary); margin-bottom: 40px; line-height: 1.1;">
-                    Rejoignez<br>l'équipe fondatrice</h2>
+                    style="font-size: 48px; font-weight: 800; color: var(--primary); margin-bottom: 45px; line-height: 1.2;">
+                    Rejoignez l'équipe fondatrice</h2>
 
-                <div style="display: flex; flex-direction: column; gap: 25px;">
+                <div style="display: flex; flex-direction: column; gap: 28px;">
                     <!-- Benefit 1 -->
-                    <div style="display: flex; align-items: flex-start; gap: 20px;">
+                    <div style="display: flex; align-items: center; gap: 18px;">
                         <div
-                            style="width: 48px; height: 48px; background: var(--gradient-secondary); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(128, 163, 186, 0.3);">
+                            style="width: 50px; height: 50px; background: var(--gradient-secondary); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(128, 163, 186, 0.3);">
                             <i class="fa-solid fa-calendar-days" style="font-size: 22px; color: white;"></i>
                         </div>
                         <div>
-                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 5px 0;">
+                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 4px 0;">
                                 Vesting 4 ans</h3>
                             <p style="font-size: 16px; color: var(--text-grey); margin: 0;">Standard marché</p>
                         </div>
                     </div>
 
                     <!-- Benefit 2 -->
-                    <div style="display: flex; align-items: flex-start; gap: 20px;">
+                    <div style="display: flex; align-items: center; gap: 18px;">
                         <div
-                            style="width: 48px; height: 48px; background: var(--gradient-accent); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3);">
+                            style="width: 50px; height: 50px; background: var(--gradient-accent); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3);">
                             <i class="fa-solid fa-rocket" style="font-size: 22px; color: white;"></i>
                         </div>
                         <div>
-                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 5px 0;">
+                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 4px 0;">
                                 Valorisation Exit</h3>
                             <p style="font-size: 16px; color: var(--text-grey); margin: 0;">Parts à la sortie</p>
                         </div>
                     </div>
 
                     <!-- Benefit 3 -->
-                    <div style="display: flex; align-items: flex-start; gap: 20px;">
+                    <div style="display: flex; align-items: center; gap: 18px;">
                         <div
-                            style="width: 48px; height: 48px; background: var(--gradient-primary); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(26, 48, 80, 0.3);">
+                            style="width: 50px; height: 50px; background: var(--gradient-primary); border-radius: 12px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 4px 12px rgba(26, 48, 80, 0.3);">
                             <i class="fa-solid fa-chart-line" style="font-size: 22px; color: white;"></i>
                         </div>
                         <div>
-                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 5px 0;">
+                            <h3 style="font-size: 20px; font-weight: 700; color: var(--primary); margin: 0 0 4px 0;">
                                 Rémunération</h3>
                             <p style="font-size: 16px; color: var(--text-grey); margin: 0;">Dès rentabilité</p>
                         </div>
