content: update mission statement
Replace 'Faire de Fokkus l'outil de référence...' with 'Positionner Fokkus comme la référence incontournable de la préparation mentale sportive.'

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 <div class="icon-box"><i class="fa-solid fa-eye"></i></div>
                 <h3>Notre vision</h3>
                 <p>Démocratiser l'accès à l'excellence mentale.</p>
-                <p>Faire de Fokkus l'outil de référence, capable de déclencher l'état de <strong>flow</strong> à la
-                    demande.</p>
+                <p>Positionner Fokkus comme la référence incontournable de la préparation mentale sportive.</p>
             </div>
         </div>
     </div>
@@ -187,7 +186,8 @@
                 <p
                     style="font-size: 19px; color: var(--text-grey); font-weight: 500; max-width: 380px; margin: 0 auto; line-height: 1.5;">
                     Vous ne travaillez pas <strong style="color: var(--primary);">"pour"</strong> Fokkus,<br>vous
-                    <strong style="color: var(--primary);">possédez</strong> Fokkus.</p>
+                    <strong style="color: var(--primary);">possédez</strong> Fokkus.
+                </p>
             </div>
 
             <!-- Divider -->
